@@ -1,11 +1,13 @@
+package SingleElementInSortedArray;
+
 import java.util.ArrayList;
 
 //Brute Force  TC: O(n), SC: O(1)
-public class Solution {
+public class SingleElementInSortedArray {
     public static int singleNonDuplicate(ArrayList<Integer> arr) {
         //    Write your code here.
         int n = arr.size();
-        if (n == 1) return arr.get(0);
+        if (n == 1) return arr.getFirst();
 
         for (int i = 0; i < n; i++) {
             // Check for first index:
